# artificial-society

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  artificial_society_manifest.json  conftest.py  pyproject.toml  requirements.txt  sitecustomize.py
.claude/: settings.json
.claude/agents/: agents-dev.md  core-lead.md  environment-dev.md  reviewer.md  systems-dev.md  viz-dev.md
.claude/commands/: check.md  integrate.md  new-system.md
.github/workflows/: ci.yml
archive/: README.md
archive/root-notes/: oee-thesen-literatur-check.md  shared-chat.txt  (+1 more)
artificial_society/: __init__.py  bootstrap.py  cell_store.py  main.py  renderer.py  rng.py  runtime_patches.py  simulation.py  world.py
docs/: agent-quickstart.md  consolidation-plan.md  ownership.md  performance-notes.md  remote-host.md  roadmap.md  serve-setup.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  (+1 more)
scripts/: check.sh  gen_kalibrierung.py  perf_bench.py  run-dashboard.bat  run-dashboard.sh
tests/: README.md  _util.py  golden_trajectory.json  test_characterization.py  test_energy_conservation.py  test_headless.py  test_import_smoke.py  test_inventory_compaction.py  test_main_cli.py  test_pathA_m1.py  test_phase2_systems.py  test_phase3_checkpoints.py  test_phase3_ensure_fields.py  test_phase3_singletons.py  test_phase3_world_facade.py  test_regression_golden.py  test_research_export_fields.py  test_research_kdtree.py  test_research_metrics.py  test_research_parallel.py  test_research_sensitivity.py  test_research_smoke.py  test_research_stats.py
(+234 files in other folders)
