[project]
name = "artificial-society"
version = "0.1.0"
description = "Agent-based emergence simulation in pure Python."
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0,<3",
    "torch>=2.8,<3",
    "pygame>=2.6,<3",
    "matplotlib>=3.9,<4",
    "networkx>=3.2,<4",
    "sympy>=1.14,<2",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
]
dev = [
    "pytest>=8.4,<9",
    "ruff>=0.6",
    "httpx>=0.27",  # FastAPI TestClient for the dashboard tests
]

[tool.setuptools.packages.find]
include = ["artificial_society*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, UP = pyupgrade, B = bugbear, SIM = simplify
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by the formatter, not enforced as an error
    "B008",  # function calls in argument defaults — common in this codebase
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
"tests/*" = ["E402"]      # conftest path setup before imports
